# AION-R2

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: main.yml
src/: config.rs  errors.rs  main.rs  util.rs
src/api/: client.rs
src/mcp/: mod.rs  server.rs  types.rs
src/tools/: analytics.rs  inference.rs  mod.rs
tests/: integration_test.rs
