# Cargo.toml for aionr2

[package]
name = "aionr2"
version = "0.1.0"
edition = "2021"
authors = ["Gemini Systems Engineer"]
description = "AION-R MCP server for AI inference and data analysis."

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal", "process", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
url = "2.5"
dotenvy = "0.15"
futures = "0.3"
bytes = "1.6"
uuid = { version = "1.8", features = ["v4", "serde"] }
time = "0.3"
jsonrpc-lite = "0.6.1"

[dev-dependencies]
wiremock = "0.6"

[[bin]]
name = "aionr2"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
